# e2e-bike-count-predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/raw/: SeoulBikeData.csv
deployment/: Dockerfile  predict.py  preprocessor.b  test.py
monitoring/: weekly_monitor.py
notebooks/: bike_count.ipynb  bike_count_refactor.ipynb  check_data_drift.ipynb  for_monitoring_simulation.ipynb  prepare_data.ipynb  prepare_processed.ipynb
tests/: test_dummy.py
training/: experiments.py  train_best_flow.py  train_xgboost.py
