[tool.poetry]
name = "e2e-bike-count-predictor"
version = "0.1.0"
description = "capstone project for mlops zoomcamp 2023"
authors = ["lucapug <lucapug@gmail.com>"]
license = "GNU v3"
readme = "README.md"
packages = [{include = "e2e_bike_count_predictor"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
