[tool.poetry]
name = "e2e-bike-count-predictor"
version = "0.1.0"
description = "capstone project for mlops zoomcamp 2023"
authors = ["lucapug <lucapug@gmail.com>"]
license = "GNU v3"
readme = "README.md"
packages = [{include = "e2e_bike_count_predictor"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "too-few-public-methods"
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
length_sort = true
