[tool.poetry]
name = "e2e-bike-count-predictor"
version = "0.1.0"
description = "capstone project for mlops zoomcamp 2023"
authors = ["lucapug <lucapug@gmail.com>"]
license = "GNU v3"
readme = "README.md"
packages = [{include = "e2e_bike_count_predictor"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
mlflow = "^2.6.0"
xgboost = "^1.7.6"
hyperopt = "^0.2.7"
prefect = "^2.11.4"
flask = "^2.3.3"
gunicorn = "^21.2.0"
evidently = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "too-few-public-methods"
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
